# Juggling-Robot-Project

Control/Logic Control (HLC)/MoveEverything/: ball_pos.mat  ball_trajectory_calculater_tres.m  catch_.m~  catch_ball.m  catch_follow.m  catch_lookup.m  create_lookuptable.m  followball.m  ik.m  ik_catch.m  ik_look.m  ik_secure.m  ik_solve.m  ik_solve2.m  inginialink_motor.py  init_app.m  juggle.m  juggle_cont.m  juggle_cont_estim.m  juggle_estimation.m  jurp_app_V2.mlapp  jurp_app_V2_exported.m  lookup_ws.mat  lookup_ws2.mat  lookup_ws3.mat  matlab.mat  plot_from_app.m  publish_motion.m  publish_ref.m  setupIK.m  track_ball.m
Control/Logic Control (HLC)/MoveEverything/ik_testing/: IKtrial2.m
Control/Logic Control (HLC)/MoveEverything/lookuptable/: Extracted_cloud_Simon.fig  cloud_of points.fig  cloud_points2.fig  create_lookuptable.m  ik_lookup.mat  ik_lookup_creator.m  limits.fig  limits2.fig  limits3.fig  limits4.fig  limits5.fig  limits6.fig  limits_xy.fig  lookup.mat  lookup_ws4.mat  one_hot.mat  points.mat  processed_limits.mat  record_values.m  setupIK.m  x_limit.mat  y_limit.mat
Control/Motor Control (LLC)/Elbow motor (Ingenia Pluto)/: disable_V2.py  home.py  inginialink_motor_V2.py
Control/Motor Control (LLC)/Shoulder & Trasnsverse motor (Mbed - Nucleo L476RG)/: mbed_backup.cpp
Moveit/Moveit/: moveit
Moveit/ws_moveit2/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
URDF/jurp1/: CMakeLists.txt  package.xml
URDF/jurp1/config/: joint_names_jurp1.yaml
URDF/jurp1/launch/: display.launch  gazebo.launch
URDF/jurp1/urdf/: jurp1.csv
(+78 files in other folders)
